*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8511 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -1,7 +1,5 @@
 #X-Generator: crowdin.net
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+#used by translators to keep track. not used with foxtrick atm
 
 # Hints:
 # translate the right side of the = sign.
