--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -1,7 +1,5 @@
 #X-Generator: crowdin.net
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+#used by translators to keep track. not used with foxtrick atm
 
 # Hints:
 # translate the right side of the = sign.
@@ -340,10 +338,29 @@ foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
 
 CopyRatings.copied=The Ratings have been copied to the clipboard.
 
+CopyYouth.trainingReport.copied=Træningsrapport er blevet kopieret.
+CopyYouth.scoutComment=Kopier talentspejderens kommentar
+CopyYouth.scoutComment.copied=Talentspejderens kommentar er kopieret.
+CopyYouth.playerSource=Kopier spillerkilde
+CopyYouth.playerSource.copied=Spillerkilde er blevet kopieret.
+CopyYouth.goto=Gå til %s
 
+MatchReportFormat.MatchReport=Kamprapport
+MatchReportFormat.lineup=Opstilling
+MatchReportFormat.halfTime=Halveg
+MatchReportFormat.fullTime=Fuld tid
+MatchReportFormat.extraTime=Overtid
+MatchReportFormat.result=Resultat
 
+CopySelected.desc=Kopier det markerede med Ctrl + C.
+SpecialPaste.desc=Indsæt med Shift + Venstre klik.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
+foxtrick.tweaks.copyskilltable=Kopier evneskema til udklipsholderen (i HT-ML format)
+foxtrick.tweaks.skilltablecopied=Evneskemaet er kopieret til udklipsholderen.
+foxtrick.tweaks.matchidcopied=Kamp-ID'et er kopieret til udklipsholderen.
+foxtrick.tweaks.postidcopied=Indlæg ID [post\=%s] er kopieret til udklipsholderen.
+foxtrick.tweaks.postingcopied=Postede %s er kopieret til udklipsholderen.
 
 #matches
 foxtrick.matches.attackdefensebars=Angreb vs forsvar
@@ -361,6 +378,10 @@ foxtrick.matches.suppstats=Supporter Statistics
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.id=Kopi %s\: %i
+copy.link=Kopier linkdestination i HT-ML
+copy.ht-ml=Kopier i HT-ML
+copy.table=Kopier skema i HT-ML
 
 #teampopups
 Manager=Manager
@@ -373,9 +394,16 @@ SendMessage=Send message
 Challenge=Challenge
 Achievements=Achievements
 TransferHistory=Transfer history
+TeamHistory=Klubhistorik
+NextMatch=Næste kamp
+AddNextMatch=Tilføj næste kamp til HT Live
 LastLineup=Last Lineup
+YouthMatches=Ungdomskampe
 more=more...
 less=less...
+TeamPopupLinks.prefsCaption=Linkindstillinger
+TeamPopupLinks.ShowByDefault=Vis som standard
+TeamPopupLinks.OpenNewTab=Åben i ny fane
 
 total_stars=Total stjerne tæller
 
@@ -390,8 +418,28 @@ foxtrick.FlagCollectionToMap.SAmerica=Syd Amerika
 foxtrick.FlagCollectionToMap.World=Verden
 
 # SkillTable
+Skill_table=Evneskema
 
+Nationality=Nationalitet
+Nationality.abbr=Nationalitet
+Flag=Flag
+Flag.abbr=Flag
+Player=Spiller
+Player.abbr=Spiller
+Age=Alder
+Age.abbr=Alder
+Match=Kamp
+Series=Serie
 
+TransferCompare=Transfersammenligning
+TransferCompare.abbr=TC
+Bookmark=Bogmærk
+Bookmark.abbr=Bogmærk
+Deadline=Deadline
+Deadline.abbr=Deadline
+CurrentBid=Nuværende bud
+CurrentBid.abbr=Bud
+CurrentBidder=Nuværende højeste byder
 CurrentBidderShort=Nuværende højestbydende
 CurrentBidderShort.abbr=Budt
 
