--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -1,7 +1,8 @@
 #X-Generator: crowdin.net
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+#used by translators to keep track. not used with foxtrick atm
+properties.language=ENGLISH MASTER
+properties.version=HEAD
+properties.translators=Developers
 
 # Hints:
 # translate the right side of the = sign.
@@ -88,7 +89,7 @@ foxtrick.TeamStats.NotPlayedLatest.label=Did not play in last match
 #special bbcode, not really youth icons
 
 
-ShowNestedQuotes=Show nested quotes  
+ShowNestedQuotes=Show nested quotes
 
 #Transferlistfilters
 
