--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -1,7 +1,5 @@
 #X-Generator: crowdin.net
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+#used by translators to keep track. not used with foxtrick atm
 
 # Hints:
 # translate the right side of the = sign.
@@ -349,7 +347,7 @@ foxtrick.ShowLineupSet.Ownerless.desc=Korosta joukkueet ilman omistajaa
 foxtrick.ShowLineupSet.Winning.desc=Korosta voittavat joukkueet
 foxtrick.SupporterStatsEnhancements.desc=Korostaa nykyisen joukkueesi pelaajat Supporter-tilastoissa
 foxtrick.MobileEnhancements.desc=Muutoksia mobiililaitteita varten
-foxtrick.MatchOrderInterface.desc=Muutoksia ottelumääräyssivuun. 
+foxtrick.MatchOrderInterface.desc=Muutoksia ottelumääräyssivuun.
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Korostaa viime pelissä pelanneet pelaajat ja näyttää edellisen pelipaikan ja pelatun ajan yksityiskohtalaatikossa
 foxtrick.MatchOrderInterface.Specialties.desc=Näytä pelaajien erikoisuudet
 foxtrick.MatchOrderInterface.StayOnPage.desc=Pysy ottelumääräyssivulla tallennuksen jälkeen
@@ -799,6 +797,7 @@ CopyYouth.scoutComment.copied=Kykyjenetsijän kommentti on kopioitu.
 CopyYouth.playerSource=Kopioi pelaajan lähdekoodi
 CopyYouth.playerSource.copied=Pelaajan tiedot kopioitu.
 CopyYouth.fixturesSource=Kopioi taulukoiden lähdekoodi
+CopyYouth.fixturesSource.copied=Taulukon lähdekoodi on kopioitu.
 
 MatchReportFormat.MatchReport=Otteluraportti
 MatchReportFormat.lineup=Kokoonpano
@@ -926,6 +925,7 @@ foxtrick.RapidId.ViewById=Katso ID\:llä
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Vaihda taulukon näkymää
+foxtrick.SkillTable.Add_homegrown_title=Lisää kaikki kasvattipelaajat nykyjoukkueesta
 foxtrick.SkillTable.showTimeInClub_title=Näyttää pelaajan edustusjoukkueessa viettämän ajan
 
 # External Chat
