--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -1,7 +1,5 @@
 #X-Generator: crowdin.net
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+#used by translators to keep track. not used with foxtrick atm
 
 # Hints:
 # translate the right side of the = sign.
@@ -21,10 +19,10 @@ pluralFormRuleID=pluralFormRule1
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Podes empregar as mensaxes da conferencia como plantiñas para utilizalas máis adiante
 foxtrick.ForumTemplates.DefaultShow.desc=Amosa ou oculta  por defecto as túas plantiñas
-foxtrick.ForumPreview.desc=Permite mostar a vista previa dunha mensaxe (Da conferencia ou do correo)
+foxtrick.ForumPreview.desc=Permite mostrar a vista previa dunha mensaxe (Da conferencia ou do correo)
 foxtrick.AddLeaveConfButton.desc=Engade un botón 'Abandoar conferencia' en cada carpeta da mesma
 foxtrick.StarsCounter.desc=Engade o número total de estrelas na páxina da aliñación do encontro
-foxtrick.MoveLinks.desc=Move os enlaces de liga e bandeira do manager ó encabezamento da mensaxe. Nota\: a opción 'Mostrar avatar' de Hattrick debe estar seleccionada para que funcione isto\!
+foxtrick.MoveLinks.desc=Move os enlaces de liga e bandeira do manager ó encabezamento da mensaxe. Nota\: debe estar seleccionada a opción 'Mostrar avatar' de Hattrick para que funcione isto\!
 #AttVsDef
 foxtrick.AttVsDef.desc=Engade as comparativas de ataque/defensa na páxina do encontro
 foxtrick.AttVsDef.oldstyle.desc=vello estilo
@@ -35,15 +33,15 @@ foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
 foxtrick.Ratings.VnukStats.desc=VnukStats
-foxtrick.BookmarkAdjust.desc=Cambia a icona asociada a un marcador insertando no comentario do mesmo o código correspondente entre corchetes\: p.ex. [cyan] mostra a icona azul cian. Valores posibeis\: aqua(auga), B(negriña), black(negro), blue(azul), Brown(marrón), cyan(azul cian), darkpurple(morado escuro), green(verde), idea, lightblue(azul claro), lightgreen(verde claro), orange(laranxa), pink(rosa), purple(morado), red(vermello), White(branco), yellow(amárelo)
+foxtrick.BookmarkAdjust.desc=Cambia a icona asociada a un marcador insertando no comentario do mesmo o código correspondente entre corchetes\: p.ex. [cyan] mostra a icona azul cian. Valores posíbeis\: aqua(auga), B(negriña), black(negro), blue(azul), Brown(marrón), cyan(azul cian), darkpurple(morado escuro), green(verde), idea, lightblue(azul claro), lightgreen(verde claro), orange(laranxa), pink(rosa), purple(morado), red(vermello), White(branco), yellow(amárelo)
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Mostra a mediana do prezo dos traspasos na páxina de Comparación de traspasos
 foxtrick.FlagCollectionToMap.desc=Amosa un mapa do mundo con tódolos países dos que conseguiches a bandeira en cada categoría
 foxtrick.TransferSearchFilters.desc=Permite usar plantiñas no Mercado de traspasos
 foxtrick.TransferDeadline.desc=Engade una liña extra a cada resultado da busca no Mercado de traspasos, indicando os días, horas e minutos que fallan para que remate a venda.
-foxtrick.HTDateFormat.desc=Engade a tempada e á semana globais de Hattrick ás datas máis importantes das páxinas do HT.
+foxtrick.HTDateFormat.desc=Engade a tempada e a semana globais de Hattrick ás datas máis importantes das páxinas do HT.
 foxtrick.HTDateFormat.LocalSeason.desc=Amosa a tempada local en lugar da tempada global do Hattrick
-foxtrick.TeamPopupLinks.desc=Fai aparecer unha pequeña ventá emerxente con ligazóns relacionadas co equipo cada vez que pasas co rato por riba dun acceso directo a un equipo
+foxtrick.TeamPopupLinks.desc=Fai aparecer unha pequena ventá emerxente con ligazóns relacionadas co equipo cada vez que pasas co rato por enriba dun acceso directo a un equipo
 foxtrick.StaffMarker.desc=Resalta os nomes dos colaboradores de HT nas conferencias. Nos cadros de texto podes definir como queres velos (mediante atributos de estilo HTML)
 foxtrick.StaffMarker.own.desc=Marcadores personais
 #ForumYouthIcons
@@ -54,25 +52,25 @@ foxtrick.ForumYouthIcons.desc=Mostra unha barra de enlaces para a academia de xu
 #
 foxtrick.CopyPostID.desc=Alteracións da ID das mensaxes da conferencia
 foxtrick.ShowForumPrefButton.desc=Presenta un atallo ás preferencias da conferencia en tódalas páxinas da mesma
-foxtrick.LinksLeague.desc=Engade algunhas ligazóns externas á paxina da liga
-foxtrick.LinksTeam.desc=Engade algunhas ligazóns externas á paxina do equipo
-foxtrick.LinksCountry.desc=Engade algunhas ligazóns externas á paxina do país
-foxtrick.LinksChallenges.desc=Engade algunhas ligazóns externas á paxina de amigábeis
-foxtrick.LinksEconomy.desc=Engade algunhas ligazóns externas á paxina de economía
-foxtrick.LinksYouthOverview.desc=Engade algunhas ligazóns externas á paxina xeral dos xuvenís
-foxtrick.LinksArena.desc=Engade algunhas ligazóns externas á paxina do estadio
-foxtrick.LinksCoach.desc=Engade algunhas ligazóns externas á paxina de trocar adestrador
-foxtrick.LinksPlayerDetail.desc=Engade algunhas ligazóns externas á paxina dos detalles do xogador
-foxtrick.LinksMatch.desc=Engade algunhas ligazóns externas á paxina dos encontros
-foxtrick.LinksTraining.desc=Engade algunhas ligazóns externas á paxina do adestramento
-foxtrick.LinksAlliances.desc=Engade algunhas ligazóns externas á paxina das federacións
-foxtrick.LinksNational.desc=Engade algunhas ligazóns externas á paxina das seleccións nacionais
-foxtrick.LinksFans.desc=Engade algunhas ligazóns externas á paxina dos socios
-foxtrick.LinksPlayers.desc=Engade algunhas ligazóns externas á paxina de xogadores
-foxtrick.LinksManager.desc=Engade algunhas ligazóns externas á paxina do mánager
-foxtrick.LinksAchievements.desc=Engade algunhas ligazóns externas á paxina dos logros
-foxtrick.LinksStaff.desc=Engade algunhas ligazóns externas á paxina do persoal
-foxtrick.LinksTracker.desc=Engade algunhas ligazóns externas ás paxinas de xogadores e adestradores nacionais.
+foxtrick.LinksLeague.desc=Engade algunhas ligazóns externas á páxina da liga
+foxtrick.LinksTeam.desc=Engade algunhas ligazóns externas á páxina do equipo
+foxtrick.LinksCountry.desc=Engade algunhas ligazóns externas á páxina do país
+foxtrick.LinksChallenges.desc=Engade algunhas ligazóns externas á páxina de amigábeis
+foxtrick.LinksEconomy.desc=Engade algunhas ligazóns externas á páxina de economía
+foxtrick.LinksYouthOverview.desc=Engade algunhas ligazóns externas á páxina xeral dos xuvenís
+foxtrick.LinksArena.desc=Engade algunhas ligazóns externas á páxina do estadio
+foxtrick.LinksCoach.desc=Engade algunhas ligazóns externas á páxina de trocar adestrador
+foxtrick.LinksPlayerDetail.desc=Engade algunhas ligazóns externas á páxina dos detalles do xogador
+foxtrick.LinksMatch.desc=Engade algunhas ligazóns externas á páxina dos encontros
+foxtrick.LinksTraining.desc=Engade algunhas ligazóns externas á páxina do adestramento
+foxtrick.LinksAlliances.desc=Engade algunhas ligazóns externas á páxina das federacións
+foxtrick.LinksNational.desc=Engade algunhas ligazóns externas á páxina das seleccións nacionais
+foxtrick.LinksFans.desc=Engade algunhas ligazóns externas á páxina dos socios
+foxtrick.LinksPlayers.desc=Engade algunhas ligazóns externas á páxina de xogadores
+foxtrick.LinksManager.desc=Engade algunhas ligazóns externas á páxina do mánager
+foxtrick.LinksAchievements.desc=Engade algunhas ligazóns externas á páxina dos logros
+foxtrick.LinksStaff.desc=Engade algunhas ligazóns externas á páxina do persoal
+foxtrick.LinksTracker.desc=Engade algunhas ligazóns externas ás páxinas de xogadores e seleccionadores nacionais.
 foxtrick.ForumAlterHeaderLine.desc=Modifica a liña de cabeceira das mensaxes da conferencia
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Só amosará unha liña de cabeceira. Esta opción pode estragar o deseño da conferencia. Se iso ocorrese usa a 'pel normal', elimina o número de bandeiras na cabeceira ou activa algunha das seguintes opcións.
@@ -95,6 +93,9 @@ foxtrick.MatchPlayerColouring.desc=Colorea aos xogadores dependendo do equipo no
 foxtrick.ForumRedirManagerToTeam.desc=Nas conferencias, cambia as ligazóns do usuario á páxina do equipo
 foxtrick.HTThreadMarker.desc=Remarca os fíos creados polos HTs
 foxtrick.TeamStats.desc=Elabora unha ollada xeral do equipo
+foxtrick.TeamStats.Speciality.desc=Especialidade
+foxtrick.TeamStats.Personality.desc=Personalidade
+foxtrick.TeamStats.Current_league.desc=Liga actual
 foxtrick.LargeFlags.desc=Cambia a bandeira pequeniña do país que se ve nas páxinas dos xogadores por outra ben grande
 foxtrick.GoToPostBox.desc=Engade un cadro para ir a unha determinada mensaxe nas páxinas das conferencias
 foxtrick.TeamSelectBox.desc=Na páxina dos xogadores, cambia a lista completa por un despregábel
@@ -110,12 +111,14 @@ foxtrick.ExtendedPlayerDetails.SW.desc=Amosa a duración do contrato en tempadas
 foxtrick.ExtendedPlayerDetails.SD.desc=Amosa a duración do contrato en tempadas - días
 foxtrick.ExtendedPlayerDetails.WD.desc=Amosa a duración do contrato en semanas - días
 foxtrick.ExtendedPlayerDetails.D.desc=Amosa a duración do contrato en días
+foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Amosar salario da tempada
 foxtrick.FixcssProblems.desc=Amaña algúns problemas de estilos CSS do HT incorrectos
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Amaña o corte de nomes de equipo largos no menú da esquerda
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Amaña imaxes FoxLink invisibles nos encabezamentos das mensaxes
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Amaña o salto de páxina cando non se mostra a barra de desprazamento
 foxtrick.FixcssProblems.RTL_Fixes.desc=Soluciona algún error do HT en linguas con escritura da dereita á esquerda
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Amaña a bara de desprazamento da conferencia. Menos parpadeo que coa de HT
+foxtrick.SimplePresentation.NoLogo.desc=Agochar escudos dos equipos
 foxtrick.SkinPlugin.desc=Engade a tua propia pel CSS ó hattrick
 foxtrick.CurrencyConverter.desc=Covertedor de moeda do HT
 foxtrick.MovePlayerStatement.desc=Move as declaración dos xogadores a súa imaxe. Se as imaxes están desactivadas as declaracións desaparecerán
@@ -137,6 +140,7 @@ foxtrick.ContextMenuCopy.desc=Engade unha opción ó menú contextual para copia
 foxtrick.NewMail.desc=Se recibes un novo correo o destaca
 foxtrick.CopyYouth.TrainingReport.desc=Engade un botó de 'Copiar reporte do adestramento' na páxina de adestramentos da academia de xuvenís.
 foxtrick.PlayerBirthday.desc=Amosa o último e o próximo aniversario do xogador nos seus detalles
+foxtrick.LeagueNewsFilter.all.desc=Amosar todas as novas
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.TeamLinks.desc=Engade unha ventá emerxente de ligazóns ás ligazóns a equipos
 foxtrick.TeamPopupLinks.UserLinks.desc=Engade unha ventá emerxente de ligazóns ás ligazóns a usuarios
@@ -150,7 +154,9 @@ foxtrick.TeamPopupLinks.SendMessage.desc=Ligazón a enviar mensaxe
 foxtrick.TeamPopupLinks.Challenge.desc=Ligazón a retos
 foxtrick.TeamPopupLinks.Achievements.desc=Ligazón a logros
 foxtrick.TeamPopupLinks.TransferHistory.desc=Vai ó historial de traspasos
+foxtrick.TeamPopupLinks.TeamHistory.desc=Historia do club
 foxtrick.TeamPopupLinks.LastLineup.desc=Vai á ultima aliñación
+foxtrick.TeamPopupLinks.NextMatch.desc=Seguinte partido
 foxtrick.TeamPopupLinks.YouthMatches.desc=Encontros dos xuvenís
 foxtrick.TeamPopupLinks.Coach.desc=Vai á páxina do adestrador
 foxtrick.TeamPopupLinks.CustomLink.desc=Ligazóns propias. As etiquetas [userid] e [teamid] se reemplazarán polas ids apropiadas
@@ -162,8 +168,13 @@ foxtrick.SkillColoring.skill_select.desc=Tamén amosa números ó buscar nos tra
 foxtrick.SkillColoring.no_skill_links.desc=Oculta o subliñado e a fonte verde dada polos HTs
 foxtrick.MatchIncome.desc=Amosar no informe dun encontro a súa recadación
 #YouthSkillHideUnknown
+foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Agochar habilidades descoñecidas
+foxtrick.SkillTable.OtherTeams.desc=Habilitar para outros equipos
 #HighlightCupwins
 #CountryList
+foxtrick.HTMSPoints.AddToPlayer.desc=Amosar na páxina do xogador
+foxtrick.MyMonitor.TeamIcons.desc=Amosar escudos dos equipos
+foxtrick.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 
 # -----------------------------------------------------------------------------
 
@@ -635,7 +646,7 @@ Copy=Copiar
 View=Ver
 Switch_view=Trocar vista
 Detach=Separar
-AddHomegrown=Engade a fidelidade dos xogadores
+AddHomegrown=Engadir a fidelidade dos xogadores
 showTimeInClub=Mostrar tempo no club
 Filter=Filtrar
 sort.up=Arriba
@@ -647,7 +658,7 @@ featureHighlight.title=Facer click para resaltar as propiedades de FoxTrick
 pageAction.rightSidebar=Mostrar barra á dereita
 pageAction.mainContent=Mostrar o contido principal
 pageAction.leftSidebar=Mostrar barra á esquerda
-pageAction.all=Mostrar todos
+pageAction.all=Amosar todos
 
 # buttons
 button.ok=OK
@@ -699,12 +710,18 @@ prefs.screenshot=Captura de pantalla
 # tabs in preferences page
 #tabs
 tab.main=Opción principais
+tab.on_page=Módulos nesta páxina
+tab.universal=Módulos universais
+tab.informationAggregation=Agregación de información
 tab.shortcutsAndTweaks=Atallos e engadidos
 tab.presentation=Presencia e melloras
 tab.matches=Encontros
 tab.forum=Conferencias
 tab.links=Ligazóns
+tab.alert=Alerta
 tab.about=Acerca de
+tab.changes=Trocos
+tab.help=Axuda
 
 foxtrick.prefs.setup=Configuración
 foxtrick.prefs.setup.desc=Estes son os axustes que FoxTrick detectou. Si non é correcto, {denunciao por favor}.
@@ -716,10 +733,13 @@ foxtrick.prefs.captionCleanupBranch=Preferencias cargadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferencias
 foxtrick.prefs.labelCleanupBranch=Recupera as opcións por defecto do Foxtrick (require reiniciar o navegador)
 # NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.oauth.delete.desc=Só se aplica para este navegador. Para refusar completamente o acceso de Foxtrick a un equipo, use {a xestión CHPP de} Hattrick.
 foxtrick.prefs.labelDisableAll=Desactiva tódolos módulos do Foxtrick
+foxtrick.prefs.labelRevokePermissions=Refusar todos os permisos opcionais (só para Chrome)
 foxtrick.prefs.labelSavePrefs=Exportar opcións do foxtrick e as persoais
 foxtrick.prefs.labelSavePrefs_Prefs=Exportar opcións de foxtrick
 foxtrick.prefs.labelSavePrefs_Notes=Exportar opcións persoais (notas, plantiñas e ligazóns personalizadas)
+foxtrick.prefs.saveNotice=Copiar o contido da área de texto e gardar como arquivo, para que poidas importar as preferencias nun futuro.
 foxtrick.prefs.labelLoadPrefs=Importar opcións do foxtrick (Preferencias actuais se sobreescribirán. Require reinicio do navegador)
 foxtrick.prefs.loadNotice=Pega as túas preferencias gardadas na área de texto e prime "Importar" para importar as túas preferencias.
 foxtrick.prefs.captionDisableSettings=Desactivar Foxtrick
@@ -732,6 +752,7 @@ foxtrick.prefs.dismissNotice=(faga clic para desbotar este aviso)
 pref.xmlLoad=Carga os XMLs para obter información extra de Hattrick
 
 link.title=Ligazóns
+link.homepage=Páxina de inicio
 link.bugTracker=Reporta un bug
 link.hattrickForum=Conferencia de FoxTrick en Hattrick
 link.screenshots=Capturas de pantalla
@@ -751,6 +772,7 @@ prefs.view.by.category=Ver por categoría
 
 delete_foxtrick_branches_ask=Estás seguro de que queres recuperar as opcións por defecto?\nFirefox ten que reiniciarse para que isto faga efecto\!
 disable_all_foxtrick_modules_ask=Estás seguro de querer desactivar tódolos módulos?\n
+revoke_permissions_ask=Estás seguro de querer refusar todos os permisos opcionais?
 
 foxtrick.prefs.AdditionalOptions=Opcións xerais
 
