--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1,7 +1,5 @@
 #X-Generator: crowdin.net
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+#used by translators to keep track. not used with foxtrick atm
 
 # Hints:
 # translate the right side of the = sign.
@@ -683,7 +681,7 @@ Last_stars_decline.abbr=Diff
 Last_position=Letzte Position
 Last_position.abbr=Pos
 #following string uses pluralForms
-Last_match_played_as=Spielte zuletzt %1 Minuten als %2.
+Last_match_played_as=Spielte zuletzt %1 Minute als %2.;Spielte zuletzt %1 Minuten als %2.
 
 Bruised=Angeschlagen
 Bruised.abbr=Ang
