--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -1,7 +1,5 @@
 #X-Generator: crowdin.net
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+#used by translators to keep track. not used with foxtrick atm
 
 # Hints:
 # translate the right side of the = sign.
