*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8514 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.language=GERMAN VERSION
 
 # Hints:
 # translate the right side of the = sign.
@@ -1106,6 +1107,7 @@ foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die 
 foxtrick.prefs.oauth.delete=OAuth Token/Secret der gewählten Vereinsid löschen.
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
+foxtrick.prefs.labelRevokePermissions=Alle optionalen Berechtigungen enziehen (nur für Google Chrome)
 foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
 foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
 foxtrick.prefs.labelSavePrefs_Notes=Exportiere persönliche Daten (Notizen, Vorlagen & eigene Links)
