--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Izstrādātāji
 
 # Hints:
 # translate the right side of the = sign.
@@ -12,12 +13,20 @@
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 #some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
-pluralFormRuleID=pluralFormRule1
+pluralFormRuleID=pluralFormRule3
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 #AttVsDef
 #Ratings
+foxtrick.Ratings.HideAverages.desc=Paslēpt vidējo vērtējumu
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detalizēti)
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 #MedianTransferPrice
 foxtrick.TeamPopupLinks.desc=Parāda nelielu izlecošo logu ar ātrajām saitēm, uzejot ar kursoru uz teamid saites
 #ForumYouthIcons
@@ -28,13 +37,21 @@ foxtrick.TeamPopupLinks.desc=Parāda nelielu izlecošo logu ar ātrajām saitēm
 # please translate next lines again if needed
 foxtrick.TeamStats.Speciality.desc=Specialitāte
 foxtrick.TeamStats.Personality.desc=Personība
+foxtrick.TeamStats.Current_league.desc=Pašreizējā līga
 #ExtendedPlayerDetails
+foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Rādīt algu bez piemaksas
+foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Rādīt sezonas algu
 foxtrick.SimplePresentation.League_Table.desc=Pievienot vertikālu līniju līgas tabulā, atvieglojot lasīšanu
 #ExtraShortcuts
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
+foxtrick.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
 #CopyMatchID
 foxtrick.CopyYouth.TrainingReport.desc=Treniņu ziņojums
 foxtrick.CopyYouth.ScoutComment.desc=Skauta komentārs
 #MoveManagerOnline
+foxtrick.TeamPopupLinks.Matches.desc=Spēles
 foxtrick.TeamPopupLinks.Players.desc=Spēlētāji
 foxtrick.TeamPopupLinks.last_5_ips.desc=Pēdējās 5 aktivitātes
 foxtrick.TeamPopupLinks.Guestbook.desc=Viesu grāmata
@@ -42,9 +59,15 @@ foxtrick.TeamPopupLinks.SendMessage.desc=Nosūtīt ziņu
 foxtrick.TeamPopupLinks.Achievements.desc=Sasniegumi
 foxtrick.TeamPopupLinks.TransferHistory.desc=Darījumu vēsture
 foxtrick.TeamPopupLinks.TeamHistory.desc=Kluba vēsture
+foxtrick.TeamPopupLinks.LastLineup.desc=Pēdējais izkārtojums
+foxtrick.TeamPopupLinks.NextMatch.desc=Nākamā spēle
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Pievienot nākamo spēli HT Live
+foxtrick.TeamPopupLinks.YouthMatches.desc=Jauniešu spēles
 foxtrick.TeamPopupLinks.Coach.desc=Treneris
+foxtrick.SkillColoring.skill_color.desc=Iekrāsot prasmes
 #YouthSkillHideUnknown
+foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Slēpt nezināmās spēlētāju prasmes
+foxtrick.SkillTable.desc=Rādīt spēlētāju prasmes tabulā.
 #HighlightCupwins
 #CountryList
 
@@ -65,6 +88,7 @@ foxtrick.ExtraShortcuts.ftprefs=FoxTrick uzstādījumi
 #HistoryStats
 foxtrick.HistoryStats.season=Sezona
 foxtrick.HistoryStats.cup=Kausa kārta
+foxtrick.HistoryStats.cupwinner=Kausa ieguvējs
 
 # YouthPromotes
 #following string uses pluralForms
@@ -79,12 +103,15 @@ foxtrick.TeamStats.label=Komandas pārskats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Sezonas pārskats
 
+foxtrick.seasonstats.goaldiff=±
+foxtrick.seasonstats.league=Līgas spēles
+foxtrick.seasonstats.friendly=Draudzības spēles
 foxtrick.seasonstats.cup=Kauss
 
 
 #Newsfeed filter
 foxtrick.LeagueNewsFilter.transfers=Darījumi
-foxtrick.LeagueNewsFilter.lineup_changes=Sastāva izmaiņas
+foxtrick.LeagueNewsFilter.lineup_changes=Spēlētāju izkārtojuma izmaiņas
 
 # FoxtrickAddLeaveConfButton
 
@@ -113,6 +140,7 @@ Filters.stamina=Izturība
 Filters.Form=Forma
 Filters.XP=Pieredze
 Filters.specialty=Specialitāte
+Filters.stars=Zvaigznes
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -120,6 +148,16 @@ Filters.specialty=Specialitāte
 #Transfer prices
 transfercompare_avgprice=Vidējā cena
 
+match.type.league=Līgas spēle
+match.type.qualification=Kvalifikācijas spēle
+match.type.cup=Kausa spēle
+match.type.friendly=Draudzības spēle
+match.type.friendly.cup=Draudzības spēle (kausa noteikumi)
+match.type.masters=Hattrick Masters
+match.type.nt.friendly=Valsts izlases draudzības spēle
+match.type.nt.competitive=Pasaules kauss
+match.type.youth.league=Jauniešu līgas spēle
+match.type.youth.friendly=Jauniešu draudzības spēle
 match.type.youth.friendly.cup=Jauniešu draudzības spēle(kausa noteikumi)
 
 matchOrder.noMatchSelected=Spēlē nav atlasīta
@@ -154,8 +192,27 @@ HTMS_Potential.abbr=Potenciāls
 
 PlayerCategory=Spēlētāja kategorija
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
+categories.GK=V
+categories.CD=CA
+categories.W=MP
+categories.IM=CP
+categories.FW=U
 
 match.pos.kp=Vārtsargs
+match.pos.lcd=Kreisais centra aizsargs
+match.pos.lcd.abbr=KCA
+match.pos.mcd=Vidējais centra aizsargs
+match.pos.mcd.abbr=VCA
+match.pos.rcd=Labais centra aizsargs
+match.pos.rcd.abbr=LCA
+match.pos.lw=Kreisais malējais pussargs
+match.pos.lw.abbr=KMP
+match.pos.lcm=Kreisais centra pussargs
+match.pos.lcm.abbr=KCP
+match.pos.mcm=Vidējais centra pussargs
+match.pos.mcm.abbr=VCP
+match.pos.rcm=Labais centra pussargs
+match.pos.rcm.abbr=LCP
 match.pos.rw=Labais malējais pussargs
 match.pos.rw.abbr=KMP
 match.pos.lf=Kreisais uzbrucējs
@@ -558,6 +615,7 @@ button.save=Saglabāt
 button.add=Pievienot
 button.remove=Noņemt
 
+status.unknown.abbr=?
 
 oauth.link=Iegūt verifikācijas kodu no chpp.hattrick.org
 oauth.success=FoxTrick ir veiksmīgi autorizēts. Pārlādējiet lapu, lai redzētu vairāk FoxTrick sniegtās informācijas.
@@ -581,7 +639,9 @@ status.disabled=atspējots
 
 # tabs in preferences page
 #tabs
+tab.matches=Spēles
 tab.forum=Diskusiju telpa
+tab.links=Saites
 tab.changes=Izmaiņas
 tab.help=Palīdzība
 
@@ -593,6 +653,7 @@ foxtrick.prefs.setup.country=Valsts
 foxtrick.prefs.labelSavePrefs_Prefs=Uzstādījumi
 foxtrick.prefs.captionDisableSettings=Izslēgt FoxTrick
 foxtrick.prefs.saved=Uzstādījumi saglabāti\!
+foxtrick.prefs.dismissNotice=(Noklikšķiniet, lai noraidītu šo paziņojumu)
 
 
 link.title=Saites
@@ -602,7 +663,10 @@ link.recentChanges=Pēdējās izmaiņas
 
 
 
+about.copyright=Autortiesības
+about.maintainers=Uzturētāji
 about.developers=Izstrādātāji
+about.translators=Tulkotāji
 
 prefs.view.by.category=Atlasīt pēc kategorijas
 prefs.view.by.page=Atlasīt pēc pēdējās HT lapas
