*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8521 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -995,11 +995,11 @@ TickerAlert.sound=Hinweiston
 # tickers
 ticker.type.welcome=Willkommen
 ticker.type.forum=Forenantworten an mich
-ticker.type.transfer=Transfermarkt
+ticker.type.transfer=Transfermarket
 ticker.type.challenge=Forderungen
 ticker.type.guestbook=Gästebuch
 ticker.type.mail=Post an mich
-ticker.type.myht=Mein Hattrick Nachrichten
+ticker.type.myht=My Hattrick Nachrichten
 ticker.type.others=Andere
 
 # LocalTime
