*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8524 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Kūrėjai
 
 # Hints:
 # translate the right side of the = sign.
