Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8530 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -706,7 +706,8 @@ Last_stars.abbr=ЗВ
 Last_position=Позиција на последњем мечу
 Last_position.abbr=Поз
 #following string uses pluralForms
-Last_match_played_as=На последњој утакмици играо %1 минут као %2;На последњој утакмици играо %1 минута као %2;На последњој утакмици играо %1 минута као %2.
+Last_match_played_as_at=На мечу %3 играо %1 минут као %2;На мечу %3 играо %1 минута као %2;На мечу %3 играо %1 минута као %2.
+Last_match_didnot_play=Још увек није играо ниједну утакмицу.
 
 Bruised=Повређен али игра
 Bruised.abbr=ПаИ
